@@ -3,69 +3,79 @@ package io.github.alisa_salimianova.client;
 import java.io.*;
 import java.net.Socket;
 import java.nio.file.Files;
-import java.nio.file.StandardOpenOption;
+import java.nio.file.Path;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Properties;
 import java.util.Scanner;
 
 public class ChatClient {
 
     private static final String LOG_FILE = "client.log";
+    private static final DateTimeFormatter TF = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
     public static void main(String[] args) {
+        String host = "localhost";
+        int port = 12345;
         try {
-            Properties settings = new Properties();
-            settings.load(new FileInputStream("src/main/resources/settings.txt"));
+            port = SettingsLoader.getPort();
+        } catch (Exception e) {
+            System.err.println("Не удалось прочитать настройки, использую localhost:12345");
+        }
 
-            String host = settings.getProperty("HOST");
-            int port = Integer.parseInt(settings.getProperty("PORT"));
-
-            Scanner scanner = new Scanner(System.in);
+        try (Scanner scanner = new Scanner(System.in)) {
             System.out.print("Введите имя пользователя: ");
-            String username = scanner.nextLine();
+            String username = scanner.nextLine().trim();
+            if (username.isEmpty()) username = "anonymous";
 
-            // Подключение к серверу
-            Socket socket = new Socket(host, port);
-            System.out.println("Подключено к серверу!");
+            try (Socket socket = new Socket(host, port)) {
+                System.out.println("Подключено к серверу " + host + ":" + port);
 
-            // Поток вывода на сервер
-            PrintWriter out = new PrintWriter(socket.getOutputStream(), true);
+                BufferedWriter out = new BufferedWriter(new OutputStreamWriter(socket.getOutputStream(), "UTF-8"));
 
-            // Старт отдельного потока для чтения
-            Thread reader = new Thread(new MessageReader(socket));
-            reader.start();
+                Thread reader = new Thread(new MessageReader(socket));
+                reader.setDaemon(true);
+                reader.start();
 
-            // Основной цикл отправки сообщений
-            while (true) {
-                String message = scanner.nextLine();
+                while (true) {
+                    String message = scanner.nextLine();
+                    if (message == null) break;
 
-                if (message.equalsIgnoreCase("/exit")) {
-                    out.println(username + " покинул чат.");
-                    log("Клиент вышел из чата");
-                    break;
+                    if (message.equalsIgnoreCase("/exit")) {
+                        String leaveMsg = username + " покинул(а) чат.";
+                        out.write(leaveMsg);
+                        out.write("\n");
+                        out.flush();
+                        logToFile("Клиент вышел из чата: " + username);
+                        break;
+                    }
+
+                    String fullMsg = username + ": " + message;
+                    out.write(fullMsg);
+                    out.write("\n");
+                    out.flush();
+
+                    logToFile(fullMsg);
                 }
 
-                String fullMsg = username + ": " + message;
-                out.println(fullMsg);
-                log(fullMsg);
+            } catch (IOException e) {
+                System.err.println("Ошибка подключения/IO: " + e.getMessage());
             }
-
-            socket.close();
 
         } catch (Exception e) {
             e.printStackTrace();
         }
+
+        System.out.println("Клиент завершил работу.");
     }
 
-    private static void log(String text) throws IOException {
-        String time = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+    private static void logToFile(String text) {
+        String time = LocalDateTime.now().format(TF);
         String logText = "[" + time + "] " + text + System.lineSeparator();
-
-        Files.write(
-                new File(LOG_FILE).toPath(),
-                logText.getBytes(),
-                StandardOpenOption.CREATE, StandardOpenOption.APPEND
-        );
+        try {
+            Path p = Path.of(LOG_FILE);
+            Files.writeString(p, logText, java.nio.file.StandardOpenOption.CREATE, java.nio.file.StandardOpenOption.APPEND);
+        } catch (IOException e) {
+            System.err.println("Не удалось записать в лог: " + e.getMessage());
+        }
     }
 }
